# ScholarPulse

./: .gitignore  2026-04-30-digest.html  AGENTS.md  README.md  config.example.yaml  pyproject.toml  research_interests.md
docs/: automation-and-shortcuts.md  deepseek-api-guide.md
literature_digest/: cli.py  config.py  digest.py  gmail_client.py  interests.py  models.py  parsers.py  ranking.py
literature_digest/llm/: base.py  codex_cli.py  factory.py  offline_stub.py  openai_compatible.py
scripts/: run_digest.bat  run_digest.ps1
tests/: test_cli_limits.py  test_config.py  test_dedupe.py  test_digest_outputs.py  test_filter_and_interests.py  test_parsers.py  test_ranking_and_digest.py
